# AfterGlow

./: .cursorrules  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: main.rs
src/components/: AllTasksView.tsx  CreateTaskModal.tsx  FloatingActionButton.tsx  KeyboardHint.tsx  LinkifiedText.tsx  ProgressBar.tsx  QuickAdd.tsx  RecurrenceModal.tsx  Sidebar.tsx  TaskCard.tsx  TaskSection.tsx  TodayView.tsx  WeekHoursPreview.tsx  WeeklyView.tsx
src/hooks/: useKeyboardShortcuts.ts
src/stores/: taskStore.ts
src/types/: task.ts
src/utils/: recurrence.ts  sorting.ts  time.ts
